--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^5.12.0",
     "eslint-loader": "^2.1.1",
     "file-loader": "^3.0.1",
