move dummyApiData.js to spec folder for exclusion from eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
       "browser": true,
       // "jquery": true,
       "node": true,
-      "jasmine": true,
+      "jasmine": false,
     },
     "rules": {
         "semi": 1,
