--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bootstrap": "^4.2.1",
     "country-list": "^2.1.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.6"
+    "popper.js": "^1.14.6",
+    "zipcodes": "^8.0.0"
   }
 }
